add content for hover dropDown

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,15 @@
     <title>Template</title>
   </head>
   <body>
-    <div id="content"></div>
+    <div id="drop-down-section">
+      <div class="hover-drop-down">
+        <button type="button" class="hover-drop-down-btn">Open</button>
+        <ul class="hover-drop-down-content">
+          <li>Drop Content 1</li>
+          <li>Drop Content 2</li>
+          <li>Drop Content 3</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
