add content for click dropDown

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,18 @@
   <body>
     <div id="drop-down-section">
       <div class="hover-drop-down">
-        <button type="button" class="hover-drop-down-btn">Open</button>
+        <button type="button" class="hover-drop-down-btn">Hover me!</button>
         <ul class="hover-drop-down-content">
+          <li>Drop Content 1</li>
+          <li>Drop Content 2</li>
+          <li>Drop Content 3</li>
+        </ul>
+      </div>
+
+
+      <div class="click-drop-down">
+        <button type="button" class="click-drop-down-btn" data-target-drop-content="drop-content-1">Click Me!</button>
+        <ul class="click-drop-down-content" id="drop-content-1">
           <li>Drop Content 1</li>
           <li>Drop Content 2</li>
           <li>Drop Content 3</li>
