add second click dropDown

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,16 @@
           <li>Drop Content 3</li>
         </ul>
       </div>
+
+
+      <div class="click-drop-down">
+        <button type="button" class="click-drop-down-btn" data-target-drop-content="drop-content-2">Click Me!</button>
+        <ul class="click-drop-down-content" id="drop-content-2">
+          <li>Drop Content 1</li>
+          <li>Drop Content 2</li>
+          <li>Drop Content 3</li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
