--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,14 @@
         </ul>
       </div>
 
-
       <div class="click-drop-down">
-        <button type="button" class="click-drop-down-btn" data-target-drop-content="drop-content-1">Click Me!</button>
+        <button
+          type="button"
+          class="click-drop-down-btn"
+          data-target-drop-content="drop-content-1"
+        >
+          Click Me!
+        </button>
         <ul class="click-drop-down-content" id="drop-content-1">
           <li>Drop Content 1</li>
           <li>Drop Content 2</li>
@@ -26,9 +31,14 @@
         </ul>
       </div>
 
-
       <div class="click-drop-down">
-        <button type="button" class="click-drop-down-btn" data-target-drop-content="drop-content-2">Click Me!</button>
+        <button
+          type="button"
+          class="click-drop-down-btn"
+          data-target-drop-content="drop-content-2"
+        >
+          Click Me!
+        </button>
         <ul class="click-drop-down-content" id="drop-content-2">
           <li>Drop Content 1</li>
           <li>Drop Content 2</li>
@@ -36,5 +46,13 @@
         </ul>
       </div>
     </div>
+
+    <div class="mobile-menu-section">
+      <header>
+        <nav></nav>
+      </header>
+    </div>
+
+    <div class="image-slider-section"></div>
   </body>
 </html>
