add content and trigger classes to tab mobile menu

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,12 @@
 
     <div class="mobile-menu-section">
       <header>
-        <nav></nav>
+        <nav class="tab-links">
+          <a href="#" class="tab-link">Home</a>
+          <a href="#" class="tab-link">About</a>
+          <a href="#" class="tab-link">Projects</a>
+          <a href="#" class="tab-link">Contact</a>
+        </nav>
       </header>
     </div>
 
