add content for slide img container

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,17 @@
       </header>
     </div>
 
-    <div class="image-slider-section"></div>
+    <div class="image-slider-section">
+      <div class="image-slider-container">
+        <div class="slide-1 slide"></div>
+        <div class="slide-2 slide"></div>
+        <div class="slide-3 slide"></div>
+        <div class="slide-4 slide"></div>
+        <div class="slide-5 slide"></div>
+        <button type="button" class="next" data-show-slide="2">Next</button>
+        <button type="button" class="prev" data-show-slide="5">Prev</button>
+
+      </div>
+    </div>
   </body>
 </html>
