add navigation circles to image slider

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="image-slider-section">
-      <div class="image-slider-container">
+      <div class="image-slider-container" data-showing="1">
         <div class="slide-1 slide"></div>
         <div class="slide-2 slide"></div>
         <div class="slide-3 slide"></div>
@@ -67,7 +67,13 @@
         <div class="slide-5 slide"></div>
         <button type="button" class="next" data-show-slide="2">Next</button>
         <button type="button" class="prev" data-show-slide="5">Prev</button>
-
+        <div class="circles">
+          <div class="dot-1 dot"></div>
+          <div class="dot-2 dot"></div>
+          <div class="dot-3 dot"></div>
+          <div class="dot-4 dot"></div>
+          <div class="dot-5 dot"></div>
+        </div>
       </div>
     </div>
   </body>
