remove dataset attributes from next and prev buttons
add dataset to image-slide-container and use to control slider flow

--- a/src/index.html
+++ b/src/index.html
@@ -65,14 +65,14 @@
         <div class="slide-3 slide"></div>
         <div class="slide-4 slide"></div>
         <div class="slide-5 slide"></div>
-        <button type="button" class="next" data-show-slide="2">Next</button>
-        <button type="button" class="prev" data-show-slide="5">Prev</button>
+        <button type="button" class="next">Next</button>
+        <button type="button" class="prev">Prev</button>
         <div class="circles">
-          <div class="dot-1 dot"></div>
-          <div class="dot-2 dot"></div>
-          <div class="dot-3 dot"></div>
-          <div class="dot-4 dot"></div>
-          <div class="dot-5 dot"></div>
+          <div class="dot-1 dot" data-slide="1"></div>
+          <div class="dot-2 dot" data-slide="2"></div>
+          <div class="dot-3 dot" data-slide="3"></div>
+          <div class="dot-4 dot" data-slide="4"></div>
+          <div class="dot-5 dot" data-slide="5"></div>
         </div>
       </div>
     </div>
